minor fixes for A.2

--- a/tex/modules/4-A/sections/2.tex
+++ b/tex/modules/4-A/sections/2.tex
@@ -37,7 +37,7 @@ Compute \(T\left(\begin{bmatrix} 3 \\ 0 \\ 0 \end{bmatrix}\right)\).
 \end{multicols}
 \end{activity}
 
-\begin{activity}{3}
+\begin{activity}{5}
 Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
 \(
   T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
@@ -61,7 +61,7 @@ Compute \(T\left(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix}\right)\).
 \end{multicols}
 \end{activity}
 
-\begin{activity}{2}
+\begin{activity}{5}
 Suppose \(T: \IR^3 \rightarrow \IR^2\) is a linear map, and you know
 \(
   T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right)
@@ -190,9 +190,14 @@ Write the standard matrix \([T(\vec e_1) \,\cdots\, T(\vec e_n)]\) for \(T\).
 \end{activity}
 
 \begin{activity}{5}
-  Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by
-$$T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}$$
+  Let \(T: \IR^3 \rightarrow \IR^2\) be the linear transformation given by
+\[T\left(\begin{bmatrix} x\\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x+3z \\ 2x-y-4z \end{bmatrix}\]
+\begin{subactivity}
+Compute \(T(\vec e_1)\), \(T(\vec e_2)\), and \(T(\vec e_3)\).
+\end{subactivity}
+\begin{subactivity}
 Find the standard matrix for \(T\).
+\end{subactivity}
 \end{activity}
 
 \begin{fact}
